[pids.wellbeing.weather] Update Latex: Question 1: Business Understanding.

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -22,8 +22,15 @@
    howpublished =   "\url{https://www.the-modeling-agency.com/crisp-dm.pdf }",
    note =         "[Online]"   
  }
- 
+
+
   
+   @MISC{git,
+  	title =        "Git",
+  	howpublished =   "\url{https://git-scm.com/}",
+  	note =         "[Online]"   
+  }
+
   @MISC{KdNuggests,
    author =      "Piatetsky, G.",
    title =        "What main methodology are you using for your analytics, data mining, or data science projects?",
@@ -44,12 +51,35 @@
    note =         "[Online]"   
  }
  
- @MISC{TDSP,
-   author =      "Schonning, N.",
-   title =        "What is the Team Data Science Process?",
-   editor =       "docs.microsoft.com",
-   year =         "2017",
-   howpublished =   "\url{https://docs.microsoft.com/en-us/azure/machine-learning/team-data-science-process/overview }",
-   note =         "[Online; posted 20-October-2017]"
+ @MISC{lintr,
+ 	title =        "Lintr",
+ 	howpublished =   "\url{ https://github.com/jimhester/lintr}",
+ 	note =         "[Online]"   
  }
  
+  @MISC{packrat,
+ 	title =        "Packrat",
+ 	howpublished =   "\url{https://rstudio.github.io/packrat/}",
+ 	note =         "[Online]"   
+ }
+
+ @MISC{pids.wellbeing.weather,
+	title =        "pids.wellbeing.weather",
+	howpublished =   "\url{https://github.com/b136325/pids.wellbeing.weather/}",
+	note =         "[Online]"   
+}
+ 
+  @MISC{rPackages,
+ 	author =      "Wickham, H",
+ 	title =        "R Pckages",
+ 	howpublished =   "\url{http://r-pkgs.had.co.nz/intro.html }",
+ 	note =         "[Online]"   
+ }
+
+  @MISC{semvar,
+	title =        "Semvar",
+	howpublished =   "\url{https://semver.org/}",
+	note =         "[Online]"   
+}
+
+
