[pids.wellbeing.weather] Version 0.5.17. Latex update for Technically Complete Question 1.

--- a/latex/references.bib
+++ b/latex/references.bib
@@ -69,14 +69,20 @@
 	note =         "[Online]"   
 }
  
-  @MISC{rPackages,
+@MISC{rPackages,
  	author =      "Wickham, H",
  	title =        "R Pckages",
  	howpublished =   "\url{http://r-pkgs.had.co.nz/intro.html }",
  	note =         "[Online]"   
  }
 
-  @MISC{semvar,
+@MISC{rTypes,
+	title =        "R data types",
+	howpublished =   "\url{https://swcarpentry.github.io/r-novice-inflammation/13-supp-data-structures/}",
+	note =         "[Online]"   
+}
+
+@MISC{semvar,
 	title =        "Semvar",
 	howpublished =   "\url{https://semver.org/}",
 	note =         "[Online]"   
